<resources>
    <string name="app_name">MoneyLaundry</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="masuk">Masuk</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daftar">Daftar</string>
    <string name="email">Email</string>
    <string name="nomor_telpon">Nomor Telpon</string>
    <string name="nama_toko">Nama Toko</string>
    <string name="alamat">Alamat</string>
    <string name="back_button">Back</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
</resources>